# cpp-myproject-template

./: .gitignore  CMakeLists.txt  README.md
myproject/app/: hello_myproject.cpp
myproject/benchmark/: benchmark_myproject.cpp
myproject/include/: myproject.h
myproject/lib/: myproject.cpp
myproject/test/: test_myproject.cpp
myproject/tools/: CMakeLists.txt
myproject/tools/tool1/: CMakeLists.txt  hello_sqlitecpp.cpp
myproject/tools/tool2/: CMakeLists.txt  myproject_imgui.cpp
